1998-03-01  Richard Henderson  <rth@cygnus.com>

	* shlib-versions: Match alpha*.
	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Add adjtimex.
	* sysdeps/unix/sysv/linux/alpha/adjtimex.S: Remove.

	* sysdeps/alpha/fpu/bits/mathinline.h (isunordered et al): New.
	Implement copysign* with and without __ prefix.
	Likewise for fabs; use builtin for gcc 2.8.
	(floor*): New.
	(fdim*): New.

	* elf/elf.h (EF_SPARC*, EF_ALPHA*, SHT_ALPHA*, SHF_ALPHA*): New.
	(R_SPARC*): Match current v9 ABI.

	* sysdeps/wordsize-64/stdint.h (intptr_t): Is a long.

	* sunrpc/clnt_udp.c (clntudp_call): Use socklen_t.
	* sunrpc/pmap_rmt.c (clnt_broadcast): Likewise.
	* sunrpc/svc_tcp.c (svctcp_create, rendezvous_request): Likewise.
	* sysdeps/generic/getresgid.c: Use prototype form because of warning.
	* sysdeps/unix/sysv/linux/getdents.c: Likewise.
	* sysdeps/unix/sysv/linux/alpha/adjtime.c: Likewise.
	* sysdeps/unix/grantpt.c (argv): Fix consts.
	* sysdeps/unix/sysv/linux/getpt.c: Include <string.h>
	* sysdeps/unix/sysv/linux/sigaction.c: Likewise.

1998-02-27  Ulrich Drepper  <drepper@cygnus.com>

	* misc/syslog.c: Change to allow user the interpretation of the
	outcome even with syslog having no return value.

1998-02-05 20:41  Wolfram Gloger  <wmglo@dent.med.uni-muenchen.de>

	* elf/dl-addr.c: Fix search algorithms in dladdr(); don't assume
	that the number of program headers is >0 (which is wrong for the
	loader itself).

1998-02-27  Ulrich Drepper  <drepper@cygnus.com>

	* Makefile (distribute): Add README.libm.

1998-02-27  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* time/clocktest.c (main): Correct typo: "--" -> "==".

1998-02-25 20:53  H.J. Lu  <hjl@gnu.org>

	* sysdeps/alpha/fpu/bits/mathinline.h (atan): Removed the bogus
	inline function.
	(copysignf, __copysignf, copysign, fabsf, __fabsf, fabs): New
	inline functions.

	* math/libm.map (__atan2): Added.

1998-02-27  Ulrich Drepper  <drepper@cygnus.com>

	* misc/efgcvt_r.c (APPEND): Handle printing of 0.0 correctly.